force-app/main/default/objects/Case/fields/Cloture_1H__c.field-meta.xml
<CustomField>
    <fullName>Cloture_1H__c</fullName>
    <formula>AND(IsClosed = TRUE, (ClosedDate - CreatedDate) &lt;= 1/24)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Clôture &lt; 1H ?</label>
    <type>Checkbox</type>
</CustomField>