force-app/main/default/objects/Case/fields/CumulateTime__c.field-meta.xml
<CustomField>
    <fullName>CumulateTime__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Temps cumulé d&#39;ouverture du ticket en minutes après fermeture</description>
    <label>CumulateTime</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>