force-app/main/default/objects/Case/fields/LastMail__c.field-meta.xml
<CustomField>
    <fullName>LastMail__c</fullName>
    <label>Date du dernier mail recu</label>
    <type>DateTime</type>
</CustomField>