force-app/main/default/objects/Case/fields/OwnerAccount__c.field-meta.xml
<CustomField>
    <fullName>OwnerAccount__c</fullName>
    <formula>Account.ReferentCollab__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Collaborateur référent</label>
    <type>Text</type>
</CustomField>