force-app/main/default/objects/Case/validationRules/ForcePriorite.validationRule-meta.xml
<ValidationRule>
    <fullName>ForcePriorite</fullName>
    <active>false</active>
    <description>Lors de la modification on force le remplissage de champs &#39;Priorité&#39;</description>
    <errorConditionFormula>AND(
	$User.BypassValidationRules__c = false,
	NOT( ISNEW() ),
	OR (
		ISPICKVAL(Priority ,&quot;Non_definie&quot;),
		ISPICKVAL(Priority ,&quot;&quot;)
	)
	
)</errorConditionFormula>
    <errorDisplayField>Priority</errorDisplayField>
    <errorMessage>Merci de remplir le champs &quot;Priorité&quot;</errorMessage>
</ValidationRule>