force-app/main/default/objects/Case/listViews/Conseil_Niveau_1_Case.listView-meta.xml
<ListView>
    <fullName>Conseil_Niveau_1_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Conseil Niveau 1</label>
    <queue>Conseil_Niveau_1</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>