force-app/main/default/objects/Case/listViews/Conseil_Niveau_2_Juridique_Case.listView-meta.xml
<ListView>
    <fullName>Conseil_Niveau_2_Juridique_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Conseil Niveau 2: Juridique</label>
    <queue>Conseil_Niveau_2_Juridique</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>