force-app/main/default/objects/Case/listViews/Support_Case.listView-meta.xml
<ListView>
    <fullName>Support_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Support Tiime</label>
    <queue>SupportTiime</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>